[gd_scene load_steps=5 format=3 uid="uid://bgyv2c3e6elo1"]

[ext_resource type="Script" uid="uid://oela1bpoei6d" path="res://Scripts/infuse_machine.gd" id="1_1fitx"]
[ext_resource type="Texture2D" uid="uid://cyle6mtghwp2j" path="res://Assets/Arts/infuse_machine.png" id="2_iej42"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a0i23"]
size = Vector2(128, 63)

[sub_resource type="CircleShape2D" id="CircleShape2D_v45oy"]
radius = 94.4299

[node name="InfuseMachine" type="StaticBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_1fitx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_iej42")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_a0i23")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_v45oy")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
